@@ -4,7 +4,8 @@ use strict;
 
 use lib 't';
 use TestLib;
-use Dpkg::Version;
+#FIXME: use Dpkg::Version;
+use PgCommon qw/$binroot/;
 
 use Test::More tests => (@MAJORS) * 4 + 1;
 
@@ -13,9 +14,9 @@ use Test::More tests => (@MAJORS) * 4 + 1;
 my ($want_lib, $avoid_lib) = $ENV{PG_READLINE} ? qw(libreadline libedit) : qw(libedit libreadline);
 
 foreach my $v (@MAJORS) {
-    like_program_out (0, "ldd /usr/lib/postgresql/$v/bin/psql", 0, qr/$want_lib\.so\./,
+    like_program_out (0, "ldd $binroot$v/bin/psql", 0, qr/$want_lib\.so\./,
 	"psql is linked against $want_lib");
-    unlike_program_out (0, "ldd /usr/lib/postgresql/$v/bin/psql", 0, qr/$avoid_lib\.so\./,
+    unlike_program_out (0, "ldd $binroot$v/bin/psql", 0, qr/$avoid_lib\.so\./,
 	"psql is not linked against $avoid_lib");
 }
 
