@@ -68,6 +68,8 @@ if [ "${INSTALL:-}" ] && [ -z "${UNSHARED:-}" ]; then
         netcat-openbsd \
         hunspell-en-us
 fi
+# requirements on RedHat:
+# perl-Time-HiRes
 
 # re-exec ourselves through unshare
 if [ -z "$UNSHARED" ]; then
@@ -91,7 +93,7 @@ if [ -e /etc/locale.gen ]; then
 	ru_RU.UTF-8 UTF-8
 EOF
     [ "$run" ] && locale-gen
-else
+elif [ -x /usr/sbin/locale-gen ]; then
     # Ubuntu
     # locale-gen will skip existing locales, so just call it for all here
     locale-gen en_US.UTF-8 ru_RU ru_RU.UTF-8
@@ -138,6 +140,7 @@ ifconfig lo up || true
 unset TMPDIR
 unset LC_ALL
 export LANG=en_US.utf8
+#redhat# export PG_READLINE=1
 
 # set variables which cause taint check errors
 export IFS=' '
